--- a/.gitignore
+++ b/.gitignore
@@ -129,4 +129,4 @@ dmypy.json
 # For now keep my personal testing scripts ignored
 scripts
 # For now keep folder with several kinds of nouns ignored
-nouns
+sample_nouns
