--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,12 +29,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
+        # Workaround install for prosodic, as it opens a file with non-ASCII text without encoding to utf8
         git clone https://github.com/quadrismegistus/prosodic.git
         cd prosodic
         sed -i 's/with open("README.md", "r") as fh:/with open("README.md", "r", encoding="utf8") as fh:/' setup.py
         python setup.py install
         cd ..
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        # Avoid using requirements.txt for now, due to workaround install
+        # if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
