--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -16,11 +16,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install pylint pylint-exit
         #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Analysing the code with pylint
       run: |
-        python -m pylint inflexion/verb.py
+        python -m pylint inflexion/verb.py || pylint_exit $?
         tee pylint.txt
     - name: Upload pylint.txt as artifact
       uses: actions/upload-artifact@v2
