--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -20,7 +20,7 @@ jobs:
         #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Analysing the code with pylint
       run: |
-        python -m pylint inflexion/verb.py || python -m pylint_exit.py $?
+        python -m pylint inflexion/verb.py || python -m pylint_exit $?
         tee pylint.txt
     - name: Upload pylint.txt as artifact
       uses: actions/upload-artifact@v2
