--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,13 +17,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint pylint-exit
-        #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Analysing the code with pylint
       run: |
-        python -m pylint inflexion/verb.py || python -m pylint_exit $?
-        tee pylint.txt
+        python -m pylint inflexion/verb.py || python -m pylint_exit $? | tee pylint.txt
     - name: Upload pylint.txt as artifact
       uses: actions/upload-artifact@v2
       with:
-        name: pylint report
+        name: pylint_report
         path: pylint.txt
