Small formatting changes, removed test

--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,6 @@ celex
 # Ignore some log files used
 logs
 # Ignore profiling files
-*.prof
+profiling
 # Remove comparison files used for checking similarity to Lingua::EN::Inflexion
 compare
