--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,26 @@
 [tox]
-envlist = py37, py38, py39
+envlist = py37, py38, py39, report, clean
 
 [testenv]
 deps = pytest
 commands = pytest
+
+[testenv:py39]
+commands = pytest --cov --cov-report=
+deps = 
+    pytest
+    pytest-cov
+
+[testenv:report]
+deps = coverage
+skip_install = true
+commands =
+    coverage report
+
+[testenv:clean]
+deps = coverage
+skip_install = true
+commands = coverage erase
 
 [pytest]
 testpaths = tests
