--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,5 @@ logs
 profiling
 # Remove comparison files used for checking similarity to Lingua::EN::Inflexion
 compare
+# Demo file for quick testing
+demo.py
