--- a/tox.ini
+++ b/tox.ini
@@ -22,5 +22,15 @@ deps = coverage
 skip_install = true
 commands = coverage erase
 
+[testenv:html]
+commands = 
+    pytest --cov --cov-report=html
+    python -c 'import os, webbrowser; webbrowser.open("file://" + os.path.realpath("htmlcov/index.html"))'
+    coverage erase
+deps =
+    pytest
+    pytest-cov
+    coverage   
+
 [pytest]
 testpaths = tests
