--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,6 +1,9 @@
 name: Pylint
 
-on: [push, pull_request, workflow_dispatch]
+on:
+  push: branches: master
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   build:
