--- a/tox.ini
+++ b/tox.ini
@@ -1,36 +1,29 @@
 [tox]
-envlist = py37, py38, py39, report, clean
+envlist = py36, py37, py38, py39, cov
 
 [testenv]
 deps = pytest
 commands = pytest
 
-[testenv:py39]
-commands = pytest --cov --cov-report=
-deps =
-    pytest
-    pytest-cov
-
-[testenv:report]
-deps = coverage
-skip_install = true
+[testenv:cov]
 commands =
+    pytest --cov --cov-report=
     coverage report
-
-[testenv:clean]
-deps = coverage
-skip_install = true
-commands = coverage erase
-
-[testenv:html]
-commands =
-    pytest --cov --cov-report=html
-    python -c 'import os, webbrowser; webbrowser.open("file://" + os.path.realpath("htmlcov/index.html"))'
     coverage erase
 deps =
     pytest
     pytest-cov
-    coverage  
+    coverage
+
+[testenv:html]
+deps =
+    pytest
+    pytest-cov
+    coverage
+commands =
+    pytest --cov --cov-report=html
+    python -c 'import os, webbrowser; webbrowser.open("file://" + os.path.realpath("htmlcov/index.html"))'
+    coverage erase
 
 [pytest]
 testpaths = tests
