--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@
 default_stages: [commit, push]
 default_language_version:
     python: python3
-include: "generate|inflex|tests"
+files: "generate|inflex|tests"
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.4.0
