Fixed codespell exclude regex

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,6 +36,6 @@ repos:
     hooks:
     -   id: codespell # spell-check source code
         args: ["-L", "sing,plur,pres,part,past,pres_part,past_part"]
-        exclude: ^(*_core\.py|inflex/data/|tests/)
+        exclude: ^(.*_core\.py|inflex/data/|tests/)
         language: python
         types: [text]
