--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,12 +30,14 @@ repos:
     rev: pylint-2.7.2
     hooks:
     -   id: pylint
+        files: ^inflex/
+        exclude: _core\.py$
 
 -   repo: https://github.com/codespell-project/codespell
     rev: v2.0.0
     hooks:
     -   id: codespell # spell-check source code
-        args: ["-L", "sing,plur,pres,part,past,pres_part,past_part"]
+        args: ["-L", "sing,plur,pres,part,past,pres_part,past_part,Wth"]
         exclude: ^(.*_core\.py|inflex/data/|tests/)
         language: python
         types: [text]
