--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,8 @@ repos:
     -   id: check-yaml
     -   id: debug-statements
     -   id: detect-private-key
+    -   id: requirements-txt-fixer
+    -   id: trailing-whitespace
 
 -   repo: https://github.com/PyCQA/bandit
     rev: 1.7.0
