Ignore generate folder for codespell

--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -14,4 +14,4 @@ jobs:
     - uses: actions/setup-python@v2
     - uses: pre-commit/action@v2.0.2
       with:
-        extra-args: tox
+        extra_args: tox
