--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -13,5 +13,5 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
     - uses: pre-commit/action@v2.0.2
-      with:
-        extra_args: tox
+    - name: Run all tests for all supported Python versions, and display test coverage
+      run: tox
