--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -14,4 +14,7 @@ jobs:
     - uses: actions/setup-python@v2
     - uses: pre-commit/action@v2.0.2
     - name: Run all tests for all supported Python versions, and display test coverage
-      run: tox
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install tox
+        tox
