--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -13,8 +13,8 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
     - uses: pre-commit/action@v2.0.2
-    - name: Run all tests for all supported Python versions, and display test coverage
+    - name: Display test coverage
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install -U pip
         python -m pip install tox
-        tox
+        tox -e cov
