--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,3 +1,11 @@
+name: pytest
+
+on:
+  pull_request:
+  push:
+    branches: [master]
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
